@@ -1,5 +1,10 @@
 2006-11-07  Akim Demaille  <demaille@gostai.com>
 
+	SVN
+	* urbi-build-aux.m4 (SVN): Define it.
+
+2006-11-07  Akim Demaille  <demaille@gostai.com>
+
 	Define LIBPORT_CPPFLAGS
 	* urbi-libport.m4: Do that.
 	* init.mk (EXTRA_HEADERS): New.
